--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,15 +22,23 @@ jobs:
           npm ci
           echo "✅ Tests passed!"
       
-      # Build phase
-      - name: Build Docker image
-        run: |
-          docker build -t ${{ github.repository }}:${{ github.sha }} .
-          echo "✅ Image built!"
-      
+      # Build and Push phase
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/quick-app:latest
+
       # Deploy phase (simulation)
       - name: Deploy to production
         run: |
           echo "🚀 Deploying to production..."
-          echo "Image: ${{ github.repository }}:${{ github.sha }}"
+          echo "Image: ${{ secrets.DOCKERHUB_USERNAME }}/quick-app:latest"
           echo "✅ Deployment successful!"
